# whoseline

./: .gitignore  .rtd-environment.yml  .travis.yml  LICENSE  README.md  README.rst  app.py  example.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  sliders.py
data/: sample_spectrum.txt
docs/: conf.py  index.rst
docs/whoseline/: index.rst
scripts/: csv2sqlite.py  lines2db.py  populate_db_commands.txt  source2db.py  whoseline.sql  whoseline.sqlite3
whoseline/: __init__.py  app.py  asplund_2021.txt  cli.py  elements.csv  interactive.py  linelist.py  linelist_mock.py  lines.py
whoseline/data/: vald3_threshold05.txt
whoseline/data/linelists/: arcturus_optical.txt  chianti.csv  iraf_sky_lines.csv  vald3.csv
