[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "wheel"]

build-backend = 'setuptools.build_meta'

[project]
name = "whoseline"
dynamic = ['version']
dependencies = [
    "matplotlib",
    "solara",
    "ipywidgets",
    "numpy",
    "astropy",
    "astroquery",
    "expecto",
    "specutils",
]

[project.scripts]
whoseline = "whoseline.cli:launch_app"